Added byte and elapsed size fields. Code refactoring